--- a/fly.toml
+++ b/fly.toml
@@ -19,6 +19,14 @@ primary_region = 'iad'
   min_machines_running = 0
   processes = ['app']
 
+  [[http_service.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[http_service.ports]]
+    port = 443
+    handlers = ['tls', 'http']
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
