--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "lint": "eslint src --ext .ts",
-        "build": "tsc",
+        "build": "tsc && cp -r src/views dist/views",
         "dev": "nodemon src/index.ts",
         "start": "node dist/index.js"
     },
